[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ff"
version = "0.1.0"
description = "Fireflies' personal utility library"
authors = [
    {name = "Fireflies3072", email = "entroprune@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"

[tool.setuptools]
packages = {find = {where = ["."]}}